--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
         <p>Hello</p>
     </div>
     <p id="text">World</p>
+
+    <div id="container">
+        <p id="line">This is clicked</p>
+    </div>
+
 </body>
 </html>
